<resources>
    <string name="app_name">Wireless Debugging</string>
    <string name="send_log_Button">Send Log</string>
    <string name="log_msg_hint">Enter Log Message</string>
    <string name="crash_button_text">Crash</string>
    <string name="exception_button_text">Exception</string>
    <string name="start_accel_data">Start Accelerometer Logging</string>
    <string name="stop_accel_data">Stop Accelerometer Logging</string>
</resources>
